--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0">
-      <a href="/publication/tfm/" >Masther&#39;s thesis</a>
+      <a href="/publication/tfm/" >Master&#39;s thesis</a>
     </h3>
 
     
